--- a/style.css
+++ b/style.css
@@ -3,3 +3,46 @@ body {
   height: 100%;
   margin: 0;
 }
+
+section#featured-property {
+  text-align: center;
+}
+
+section#featured-property p {
+  width: 800px;
+  margin: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+h1 {
+  margin: auto;
+  padding: 10px;
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin: auto;
+}
+
+nav {
+  text-align: center;
+}
+
+nav a {
+  padding-right: 10px;
+  padding-left: 10px;
+  background: orange;
+}
+
+figcaption {
+  font-size: small;
+}
+
+section#details div {
+  float: left;
+  background: green;
+  text-align: center;
+  width: 25%;
+}
